tests/script_runtime_errors/undefined_local/error.txt
Error: 
    7 | missing_var
      | ^^^^^^^^^^^ Trying to access a non existing local key `missing_var`